--- a/services.ini
+++ b/services.ini
@@ -21,3 +21,11 @@ stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
 command = /opt/tariq/sniproxy.sh
+
+[program:nginx]
+autorestart = true
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes = 0
+stderr_logfile = /dev/stderr
+stderr_logfile_maxbytes = 0
+command = /opt/tariq/nginx.sh
