--- a/services.ini
+++ b/services.ini
@@ -29,3 +29,11 @@ stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
 command = /opt/tariq/nginx.sh
+
+[program:doh]
+autorestart = true
+stdout_logfile = /dev/stdout
+stdout_logfile_maxbytes = 0
+stderr_logfile = /dev/stderr
+stderr_logfile_maxbytes = 0
+command = /opt/tariq/doh.sh
