--- a/doh-server.template.conf
+++ b/doh-server.template.conf
@@ -41,7 +41,7 @@ path = "${DOH_HTTP_PREFIX}"
 #     "udp:8.8.8.8:53",
 #     "udp:8.8.4.4:53",
 # ]
-upstream = [ "udp:127.0.0.1:53" ]
+upstream = [ "127.0.0.1:53" ]
 # upstream = [ "${UPSTREAM_DNS_SERVER}" ]
 
 # Upstream timeout
