--- a/stream.conf
+++ b/stream.conf
@@ -5,16 +5,31 @@ upstream dns-servers {
 server {
     listen 853 ssl;
 
-    ssl_certificate ${cert_path};
-    ssl_certificate_key ${key_path};
+    # ssl_certificate ${cert_path};
+    # ssl_certificate_key ${key_path};
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+    # ssl_protocols TLSv1.2 TLSv1.3;
+    # ssl_ciphers HIGH:!aNULL:!MD5;
+    # ssl_prefer_server_ciphers on;
         
-    ssl_handshake_timeout 10s;
-    ssl_session_cache shared:SSL:20m;
-    ssl_session_timeout 4h;
+    # ssl_handshake_timeout 10s;
+    # ssl_session_cache shared:SSL:20m;
+    # ssl_session_timeout 4h;
+        ssl_certificate ${cert_path};
+        ssl_certificate_key ${key_path};
+        ssl_dhparam ${dhparam_path};
+        ssl_protocols TLSv1.2 TLSv1.3;          # TLS 1.3 requires nginx >= 1.13.0
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+        ssl_ecdh_curve secp384r1;               # Requires nginx >= 1.1.0
+        ssl_session_timeout  10m;
+        ssl_session_cache shared:SSLDOT:10m;
+        ssl_session_tickets off;                # Requires nginx >= 1.5.9
+        ssl_stapling on;                        # Requires nginx >= 1.3.7
+        ssl_stapling_verify on;                 # Requires nginx => 1.3.7
+        ssl_early_data off;                     # 0-RTT, enable if desired - Requires nginx >= 1.15.4
+        # resolver 1.1.1.1 valid=300s;            # Replace with your local resolver
+        # resolver_timeout 5s;
 
     proxy_pass dns-servers;
 }
