--- a/stream.conf
+++ b/stream.conf
@@ -25,9 +25,9 @@ server {
         ssl_session_timeout  10m;
         ssl_session_cache shared:SSLDOT:10m;
         ssl_session_tickets off;                # Requires nginx >= 1.5.9
-        ssl_stapling on;                        # Requires nginx >= 1.3.7
-        ssl_stapling_verify on;                 # Requires nginx => 1.3.7
-        ssl_early_data off;                     # 0-RTT, enable if desired - Requires nginx >= 1.15.4
+        # ssl_stapling on;                        # Requires nginx >= 1.3.7
+        # ssl_stapling_verify on;                 # Requires nginx => 1.3.7
+        # ssl_early_data off;                     # 0-RTT, enable if desired - Requires nginx >= 1.15.4
         # resolver 1.1.1.1 valid=300s;            # Replace with your local resolver
         # resolver_timeout 5s;
 
