change DOH server

--- a/apps/services.ini
+++ b/apps/services.ini
@@ -4,7 +4,7 @@ stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
-command = /opt/tariq/dnsmasq.sh
+command = /opt/tariq/apps/dnsmasq.sh
 
 [program:dnsmasq-cache]
 autorestart = true
@@ -12,7 +12,7 @@ stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
-command = /opt/tariq/dnsmasq.sh --cache
+command = /opt/tariq/apps/dnsmasq.sh --cache
 
 [program:sniproxy]
 autorestart = true
@@ -20,7 +20,7 @@ stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
-command = /opt/tariq/sniproxy.sh
+command = /opt/tariq/apps/sniproxy.sh
 
 [program:nginx]
 autorestart = true
@@ -28,7 +28,7 @@ stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
-command = /opt/tariq/nginx.sh
+command = /opt/tariq/apps/nginx.sh
 
 [program:doh]
 autorestart = true
@@ -36,4 +36,4 @@ stdout_logfile = /dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
-command = /opt/tariq/doh.sh
+command = /opt/tariq/apps/doh.sh
