--- a/apps/services.ini
+++ b/apps/services.ini
@@ -30,10 +30,10 @@ stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
 command = /opt/tariq/apps/nginx.sh
 
-[program:doh]
-autorestart = true
-stdout_logfile = /dev/stdout
-stdout_logfile_maxbytes = 0
-stderr_logfile = /dev/stderr
-stderr_logfile_maxbytes = 0
-command = /opt/tariq/apps/doh.sh
+; [program:doh]
+; autorestart = true
+; stdout_logfile = /dev/stdout
+; stdout_logfile_maxbytes = 0
+; stderr_logfile = /dev/stderr
+; stderr_logfile_maxbytes = 0
+; command = /opt/tariq/apps/doh.sh
