--- a/nginx/http.templates.d/doh.conf
+++ b/nginx/http.templates.d/doh.conf
@@ -50,15 +50,15 @@ server {
   }
 }
 
-server {
-  listen 8080;
-  location /api {
-    api write=on;
-    allow 127.0.0.1;
-    # allow 192.168.64.1;
-    deny all;
-  }
-}
+# server {
+#   listen 8080;
+#   location /api {
+#     api write=on;
+#     allow 127.0.0.1;
+#     # allow 192.168.64.1;
+#     deny all;
+#   }
+# }
 
 # server{
 
