--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -41,10 +41,10 @@ upstream tariq-dot {
 
 
   # KeyValue store for blocking domains (NGINX Plus only)
-  keyval_zone zone=dns_config:64k state=/etc/nginx/zones/dns_config.zone; 
-  keyval "blocked_domains" $blocked_domains zone=dns_config;
-  keyval "blackhole_domains" $blackhole_domains zone=dns_config;
-  keyval $dns_qname $scrub_action zone=dns_config;
+  # keyval_zone zone=dns_config:64k state=/etc/nginx/zones/dns_config.zone; 
+  # keyval "blocked_domains" $blocked_domains zone=dns_config;
+  # keyval "blackhole_domains" $blackhole_domains zone=dns_config;
+  # keyval $dns_qname $scrub_action zone=dns_config;
 
   # DNS logging
   log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
