Fixed typo in DOT config

--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -136,7 +136,7 @@ upstream tariq-dot {
     listen 127.0.0.1:8053;
     js_filter dns.filter_doh_request;
     proxy_ssl on;
-    proxy_pass traiq-dot;
+    proxy_pass tariq-dot;
   }
 
   # Server for sending blackhole/blocked responses
