--- a/nginx/http.templates.d/doh.conf
+++ b/nginx/http.templates.d/doh.conf
@@ -28,6 +28,7 @@ server {
   ssl_certificate_key ${key_path};
   ssl_session_cache shared:ssl_cache:10m;
   ssl_session_timeout 10m;
+  server_name ${domain};
   
   # DoH may use GET or POST requests, Cache both
   proxy_cache_methods GET POST;
