--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -51,29 +51,15 @@
   # The DNS response packet, if we're blocking the domain, this will be set.
   js_set $dns_response dns.get_response;
 
-  # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
-  map $dns_qname $upstream {
-    hostnames;
-    *.nginx dnsmasq;
-    *.k8s dnsmasq;
-    default google;
-  }
 
-  # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
-  map $dns_response $upstream_pool {
-    "blocked" blocked;
-    "blackhole" blackhole;
-    default $upstream;
-  }
-
-  upstream tariq-dns {
-    zone dns 64k;
-    server    127.0.0.1:53;
-}
-upstream tariq-dot {
-    zone dns 64k;
-    server    127.0.0.1:853;
-}
+#   upstream tariq-dns {
+#     zone dns 64k;
+#     server    127.0.0.1:53;
+# }
+# upstream tariq-dot {
+#     zone dns 64k;
+#     server    127.0.0.1:853;
+# }
 
 
   # upstream pool for blocked requests
@@ -90,7 +76,7 @@ upstream tariq-dot {
   # upstream pools (google DNS)
   upstream google {
     zone dns 64k;
-    server 8.8.8.8:53;
+    server 127.0.0.1:53;
   }
 
   # upstream pools (another DNS)
@@ -102,14 +88,29 @@ upstream tariq-dot {
   # DNS upstream pool.
   upstream dns {
     zone dns 64k;
-    server 8.8.8.8:53;
+    server 127.0.0.1:53;
   }
 
   # DNS over TLS upstream pool
   upstream dot {
     zone dot 64k;
-    server 8.8.8.8:853;
+    server 127.0.0.1:853;
   }
+  # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
+  map $dns_qname $upstream {
+    # hostnames;
+    # *.nginx dnsmasq;
+    # *.k8s dnsmasq;
+    default dns;
+  }
+
+  # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
+  map $dns_response $upstream_pool {
+    # "blocked" blocked;
+    # "blackhole" blackhole;
+    default $upstream;
+  }
+
 
   # DNS(TCP) and DNS over TLS (DoT) Server
   # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
@@ -120,7 +121,7 @@ upstream tariq-dot {
     ssl_certificate_key ${key_path};
     js_preread dns.preread_dns_request;
     #proxy_ssl on;
-    proxy_pass tariq-dns;
+    proxy_pass dns;
   }
 
   # DNS(UDP) Server
@@ -129,7 +130,7 @@ upstream tariq-dot {
     listen 553 udp;
     js_preread dns.preread_dns_request;
     proxy_responses 1;
-    proxy_pass tariq-dns;
+    proxy_pass dns;
   }
 
   # DNS over HTTPS (gateway) Service
@@ -138,7 +139,7 @@ upstream tariq-dot {
     listen 127.0.0.1:8053;
     js_filter dns.filter_doh_request;
     proxy_ssl on;
-    proxy_pass tariq-dot;
+    proxy_pass dot;
   }
 
   # Server for sending blackhole/blocked responses
@@ -148,7 +149,7 @@ upstream tariq-dot {
     listen 127.0.0.1:9953 udp;
     listen 127.0.0.1:9853 udp;
     js_preread dns.preread_dns_request;
-    return tariq-dns;
+    return dns;
   }
 
 
