--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -43,13 +43,13 @@
   access_log /var/log/nginx/dns-access.log dns;
 
   # Import the NJS DNS module
-  js_import /etc/nginx/njs.d/dns/dns.js;
+  # js_import /etc/nginx/njs.d/dns/dns.js;
 
-  # The $dns_qname variable can be populated by preread calls, and can be used for DNS routing
-  js_set $dns_qname dns.get_qname;
+  # # The $dns_qname variable can be populated by preread calls, and can be used for DNS routing
+  # js_set $dns_qname dns.get_qname;
   
-  # The DNS response packet, if we're blocking the domain, this will be set.
-  js_set $dns_response dns.get_response;
+  # # The DNS response packet, if we're blocking the domain, this will be set.
+  # js_set $dns_response dns.get_response;
 
 
 #   upstream tariq-dns {
@@ -119,37 +119,37 @@
     listen 853 ssl;
     ssl_certificate ${cert_path};
     ssl_certificate_key ${key_path};
-    js_preread dns.preread_dns_request;
+    # js_preread dns.preread_dns_request;
     #proxy_ssl on;
     proxy_pass dns;
   }
 
   # DNS(UDP) Server
   # Upstream can only be another DNS(UDP) server.
-  server {
-    listen 553 udp;
-    js_preread dns.preread_dns_request;
-    proxy_responses 1;
-    proxy_pass dns;
-  }
+  # server {
+  #   listen 553 udp;
+  #   js_preread dns.preread_dns_request;
+  #   proxy_responses 1;
+  #   proxy_pass dns;
+  # }
 
-  # DNS over HTTPS (gateway) Service
-  # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
-  server {
-    listen 127.0.0.1:8053;
-    js_filter dns.filter_doh_request;
-    proxy_ssl on;
-    proxy_pass dot;
-  }
+  # # DNS over HTTPS (gateway) Service
+  # # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
+  # server {
+  #   listen 127.0.0.1:8053;
+  #   js_filter dns.filter_doh_request;
+  #   proxy_ssl on;
+  #   proxy_pass dot;
+  # }
 
-  # Server for sending blackhole/blocked responses
-  server {
-    listen 127.0.0.1:9953;
-    listen 127.0.0.1:9853;
-    listen 127.0.0.1:9953 udp;
-    listen 127.0.0.1:9853 udp;
-    js_preread dns.preread_dns_request;
-    return dns;
-  }
+  # # Server for sending blackhole/blocked responses
+  # server {
+  #   listen 127.0.0.1:9953;
+  #   listen 127.0.0.1:9853;
+  #   listen 127.0.0.1:9953 udp;
+  #   listen 127.0.0.1:9853 udp;
+  #   js_preread dns.preread_dns_request;
+  #   return dns;
+  # }
 
 
