--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -96,20 +96,20 @@
     zone dot 64k;
     server 127.0.0.1:853;
   }
-  # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
-  map $dns_qname $upstream {
-    # hostnames;
-    # *.nginx dnsmasq;
-    # *.k8s dnsmasq;
-    default dns;
-  }
+  # # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
+  # map $dns_qname $upstream {
+  #   # hostnames;
+  #   # *.nginx dnsmasq;
+  #   # *.k8s dnsmasq;
+  #   default dns;
+  # }
 
-  # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
-  map $dns_response $upstream_pool {
-    # "blocked" blocked;
-    # "blackhole" blackhole;
-    default $upstream;
-  }
+  # # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
+  # map $dns_response $upstream_pool {
+  #   # "blocked" blocked;
+  #   # "blackhole" blackhole;
+  #   default $upstream;
+  # }
 
 
   # DNS(TCP) and DNS over TLS (DoT) Server
