--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -39,8 +39,8 @@
   # keyval $dns_qname $scrub_action zone=dns_config;
 
   # DNS logging
-  log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
-  access_log /var/log/nginx/dns-access.log dns;
+  # log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
+  # access_log /var/log/nginx/dns-access.log dns;
 
   # Import the NJS DNS module
   # js_import /etc/nginx/njs.d/dns/dns.js;
