new encrypted method

--- a/apps/services.ini
+++ b/apps/services.ini
@@ -22,13 +22,13 @@ stderr_logfile = /dev/stderr
 stderr_logfile_maxbytes = 0
 command = /opt/tariq/apps/sniproxy.sh
 
-[program:nginx]
-autorestart = true
-stdout_logfile = /dev/stdout
-stdout_logfile_maxbytes = 0
-stderr_logfile = /dev/stderr
-stderr_logfile_maxbytes = 0
-command = /opt/tariq/apps/nginx.sh
+; [program:nginx]
+; autorestart = true
+; stdout_logfile = /dev/stdout
+; stdout_logfile_maxbytes = 0
+; stderr_logfile = /dev/stderr
+; stderr_logfile_maxbytes = 0
+; command = /opt/tariq/apps/nginx.sh
 
 ; [program:doh]
 ; autorestart = true
