--- a/nginx/stream.templates.d/dot.conf
+++ b/nginx/stream.templates.d/dot.conf
@@ -88,7 +88,7 @@
   # DNS upstream pool.
   upstream dns {
     zone dns 64k;
-    server 127.0.0.1:53;
+    server tariq:53;
   }
 
   # DNS over TLS upstream pool
@@ -117,8 +117,8 @@
   server {
     listen 553;
     listen 853 ssl;
-    ssl_certificate ${cert_path};
-    ssl_certificate_key ${key_path};
+    ssl_certificate /ssl/cert.pem;
+    ssl_certificate_key /ssl/key.pem;
     # js_preread dns.preread_dns_request;
     #proxy_ssl on;
     proxy_pass dns;
