--- a/nginx/http.templates.d/doh.conf
+++ b/nginx/http.templates.d/doh.conf
@@ -24,11 +24,11 @@ server {
 
   # Listen on standard HTTPS port, and accept HTTP2, with SSL termination
   listen 4443 ssl http2;
-  ssl_certificate ${cert_path};
-  ssl_certificate_key ${key_path};
+  ssl_certificate /ssl/cert.pem;
+  ssl_certificate_key /ssl/key.pem;
   ssl_session_cache shared:ssl_cache:10m;
   ssl_session_timeout 10m;
-  server_name ${domain};
+  # server_name ${domain};
   
   # DoH may use GET or POST requests, Cache both
   proxy_cache_methods GET POST;
