--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
       tariq-net: {}
     build:
       dockerfile: nginx.Dockerfile
+    ports:
+      - 853:853
+      - 4443:4443
     volumes:
       - /ssl/cert.pem:/ssl/cert.pem
       - /ssl/key.pem:/ssl/key.pem
