--- a/nginx/stream.d/dot.conf
+++ b/nginx/stream.d/dot.conf
@@ -63,27 +63,27 @@
 
 
   # upstream pool for blocked requests
-  upstream blocked {
-    zone blocked 64k;
-    server 127.0.0.1:9953;
-  }
+  # upstream blocked {
+  #   zone blocked 64k;
+  #   server 127.0.0.1:9953;
+  # }
 
-  upstream blackhole {
-    zone blackhole 64k;
-    server 127.0.0.1:9853;
-  }
+  # upstream blackhole {
+  #   zone blackhole 64k;
+  #   server 127.0.0.1:9853;
+  # }
 
-  # upstream pools (google DNS)
-  upstream google {
-    zone dns 64k;
-    server 127.0.0.1:53;
-  }
+  # # upstream pools (google DNS)
+  # upstream google {
+  #   zone dns 64k;
+  #   server 127.0.0.1:53;
+  # }
 
-  # upstream pools (another DNS)
-  upstream dnsmasq {
-    zone dns 64k;
-    server 192.168.64.1:5353;
-  }
+  # # upstream pools (another DNS)
+  # upstream dnsmasq {
+  #   zone dns 64k;
+  #   server 192.168.64.1:5353;
+  # }
 
   # DNS upstream pool.
   upstream dns {
@@ -119,37 +119,37 @@
     listen 853 ssl;
     ssl_certificate /ssl/cert.pem;
     ssl_certificate_key /ssl/key.pem;
-    # js_preread dns.preread_dns_request;
+    js_preread dns.preread_dns_request;
     #proxy_ssl on;
     proxy_pass dns;
   }
 
   # DNS(UDP) Server
   # Upstream can only be another DNS(UDP) server.
-  # server {
-  #   listen 553 udp;
-  #   js_preread dns.preread_dns_request;
-  #   proxy_responses 1;
-  #   proxy_pass dns;
-  # }
+  server {
+    listen 553 udp;
+    js_preread dns.preread_dns_request;
+    proxy_responses 1;
+    proxy_pass dns;
+  }
 
-  # # DNS over HTTPS (gateway) Service
-  # # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
-  # server {
-  #   listen 127.0.0.1:8053;
-  #   js_filter dns.filter_doh_request;
-  #   proxy_ssl on;
-  #   proxy_pass dot;
-  # }
+  # DNS over HTTPS (gateway) Service
+  # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
+  server {
+    listen 127.0.0.1:8053;
+    js_filter dns.filter_doh_request;
+    proxy_ssl on;
+    proxy_pass dot;
+  }
 
-  # # Server for sending blackhole/blocked responses
-  # server {
-  #   listen 127.0.0.1:9953;
-  #   listen 127.0.0.1:9853;
-  #   listen 127.0.0.1:9953 udp;
-  #   listen 127.0.0.1:9853 udp;
-  #   js_preread dns.preread_dns_request;
-  #   return dns;
-  # }
+  # Server for sending blackhole/blocked responses
+  server {
+    listen 127.0.0.1:9953;
+    listen 127.0.0.1:9853;
+    listen 127.0.0.1:9953 udp;
+    listen 127.0.0.1:9853 udp;
+    js_preread dns.preread_dns_request;
+    return dns;
+  }
 
 
