--- a/nginx/stream.d/dot.conf
+++ b/nginx/stream.d/dot.conf
@@ -62,28 +62,28 @@
 # }
 
 
-  # upstream pool for blocked requests
-  # upstream blocked {
-  #   zone blocked 64k;
-  #   server 127.0.0.1:9953;
-  # }
+  upstream pool for blocked requests
+  upstream blocked {
+    zone blocked 64k;
+    server 127.0.0.1:9953;
+  }
 
-  # upstream blackhole {
-  #   zone blackhole 64k;
-  #   server 127.0.0.1:9853;
-  # }
+  upstream blackhole {
+    zone blackhole 64k;
+    server 127.0.0.1:9853;
+  }
 
-  # # upstream pools (google DNS)
-  # upstream google {
-  #   zone dns 64k;
-  #   server 127.0.0.1:53;
-  # }
+  # upstream pools (google DNS)
+  upstream google {
+    zone dns 64k;
+    server 127.0.0.1:53;
+  }
 
-  # # upstream pools (another DNS)
-  # upstream dnsmasq {
-  #   zone dns 64k;
-  #   server 192.168.64.1:5353;
-  # }
+  # upstream pools (another DNS)
+  upstream dnsmasq {
+    zone dns 64k;
+    server 192.168.64.1:5353;
+  }
 
   # DNS upstream pool.
   upstream dns {
@@ -96,20 +96,20 @@
     zone dot 64k;
     server 127.0.0.1:853;
   }
-  # # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
-  # map $dns_qname $upstream {
-  #   # hostnames;
-  #   # *.nginx dnsmasq;
-  #   # *.k8s dnsmasq;
-  #   default dns;
-  # }
+  # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
+  map $dns_qname $upstream {
+    # hostnames;
+    # *.nginx dnsmasq;
+    # *.k8s dnsmasq;
+    default dns;
+  }
 
-  # # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
-  # map $dns_response $upstream_pool {
-  #   # "blocked" blocked;
-  #   # "blackhole" blackhole;
-  #   default $upstream;
-  # }
+  # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
+  map $dns_response $upstream_pool {
+    # "blocked" blocked;
+    # "blackhole" blackhole;
+    default $upstream;
+  }
 
 
   # DNS(TCP) and DNS over TLS (DoT) Server
