--- a/nginx/stream.d/dot.conf
+++ b/nginx/stream.d/dot.conf
@@ -62,7 +62,7 @@
 # }
 
 
-  upstream pool for blocked requests
+  # upstream pool for blocked requests
   upstream blocked {
     zone blocked 64k;
     server 127.0.0.1:9953;
