--- a/nginx/stream.d/dot.conf
+++ b/nginx/stream.d/dot.conf
@@ -40,16 +40,16 @@
 
   # DNS logging
   # log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
-  # access_log /var/log/nginx/dns-access.log dns;
+  access_log /var/log/nginx/dns-access.log dns;
 
   # Import the NJS DNS module
-  # js_import /etc/nginx/njs.d/dns/dns.js;
+  js_import /etc/nginx/njs.d/dns/dns.js;
 
-  # # The $dns_qname variable can be populated by preread calls, and can be used for DNS routing
-  # js_set $dns_qname dns.get_qname;
+  # The $dns_qname variable can be populated by preread calls, and can be used for DNS routing
+  js_set $dns_qname dns.get_qname;
   
-  # # The DNS response packet, if we're blocking the domain, this will be set.
-  # js_set $dns_response dns.get_response;
+  # The DNS response packet, if we're blocking the domain, this will be set.
+  js_set $dns_response dns.get_response;
 
 
 #   upstream tariq-dns {
