--- a/nginx/stream.d/dot.conf
+++ b/nginx/stream.d/dot.conf
@@ -39,7 +39,7 @@
   # keyval $dns_qname $scrub_action zone=dns_config;
 
   # DNS logging
-  # log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
+  log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
   access_log /var/log/nginx/dns-access.log dns;
 
   # Import the NJS DNS module
