--- a/nginx/conf.d/doh.conf
+++ b/nginx/conf.d/doh.conf
@@ -11,7 +11,7 @@
 # }
 upstream dohloop {
     zone dohloop 64k;
-    server 127.0.0.1:8053;
+    server tariq-doh:8053;
     keepalive_timeout 60s;
     keepalive_requests 100;
     keepalive 10;
@@ -34,12 +34,13 @@ server {
   proxy_cache_methods GET POST;
 
   # Return 404 to all responses, except for those using our published DoH URI
-  location / {
-    return 404 "404 Not Found\n";
-  }
+  # location / {
+  #   return 404 "404 Not Found\n";
+  # }
 
   # This is our published DoH URI 
-  location /dns-query {
+  # location /dns-query {
+  location / {
     # Proxy HTTP/1.1, clear the connection header to enable Keep-Alive
     proxy_http_version 1.1;
     proxy_set_header Connection "";
