--- a/nginx/stream.d/dot.conf
+++ b/nginx/stream.d/dot.conf
@@ -39,17 +39,17 @@
   # keyval $dns_qname $scrub_action zone=dns_config;
 
   # DNS logging
-  log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
-  access_log /var/log/nginx/dns-access.log dns;
+  # log_format  dns   '$remote_addr [$time_local] $protocol "$dns_qname" "$upstream_pool"';
+  # access_log /var/log/nginx/dns-access.log dns;
 
   # Import the NJS DNS module
-  js_import /etc/nginx/njs.d/dns/dns.js;
+  # js_import /etc/nginx/njs.d/dns/dns.js;
 
-  # The $dns_qname variable can be populated by preread calls, and can be used for DNS routing
-  js_set $dns_qname dns.get_qname;
+  # # The $dns_qname variable can be populated by preread calls, and can be used for DNS routing
+  # js_set $dns_qname dns.get_qname;
   
-  # The DNS response packet, if we're blocking the domain, this will be set.
-  js_set $dns_response dns.get_response;
+  # # The DNS response packet, if we're blocking the domain, this will be set.
+  # js_set $dns_response dns.get_response;
 
 
 #   upstream tariq-dns {
@@ -62,28 +62,28 @@
 # }
 
 
-  # upstream pool for blocked requests
-  upstream blocked {
-    zone blocked 64k;
-    server 127.0.0.1:9953;
-  }
+  # # upstream pool for blocked requests
+  # upstream blocked {
+  #   zone blocked 64k;
+  #   server 127.0.0.1:9953;
+  # }
 
-  upstream blackhole {
-    zone blackhole 64k;
-    server 127.0.0.1:9853;
-  }
+  # upstream blackhole {
+  #   zone blackhole 64k;
+  #   server 127.0.0.1:9853;
+  # }
 
-  # upstream pools (google DNS)
-  upstream google {
-    zone dns 64k;
-    server 127.0.0.1:53;
-  }
+  # # upstream pools (google DNS)
+  # upstream google {
+  #   zone dns 64k;
+  #   server 127.0.0.1:53;
+  # }
 
-  # upstream pools (another DNS)
-  upstream dnsmasq {
-    zone dns 64k;
-    server 192.168.64.1:5353;
-  }
+  # # upstream pools (another DNS)
+  # upstream dnsmasq {
+  #   zone dns 64k;
+  #   server 192.168.64.1:5353;
+  # }
 
   # DNS upstream pool.
   upstream dns {
@@ -96,20 +96,20 @@
     zone dot 64k;
     server 127.0.0.1:853;
   }
-  # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
-  map $dns_qname $upstream {
-    # hostnames;
-    # *.nginx dnsmasq;
-    # *.k8s dnsmasq;
-    default dns;
-  }
+  # # When doing DNS routing, use $dns_qname to map the questions to the upstream pools.
+  # map $dns_qname $upstream {
+  #   # hostnames;
+  #   # *.nginx dnsmasq;
+  #   # *.k8s dnsmasq;
+  #   default dns;
+  # }
 
-  # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
-  map $dns_response $upstream_pool {
-    # "blocked" blocked;
-    # "blackhole" blackhole;
-    default $upstream;
-  }
+  # # Set upstream to be the pool defined above if dns_response is empty, else pass to the @block location
+  # map $dns_response $upstream_pool {
+  #   # "blocked" blocked;
+  #   # "blackhole" blackhole;
+  #   default $upstream;
+  # }
 
 
   # DNS(TCP) and DNS over TLS (DoT) Server
@@ -119,37 +119,37 @@
     listen 853 ssl;
     ssl_certificate /ssl/cert.pem;
     ssl_certificate_key /ssl/key.pem;
-    js_preread dns.preread_dns_request;
+    # js_preread dns.preread_dns_request;
     #proxy_ssl on;
     proxy_pass dns;
   }
 
   # DNS(UDP) Server
   # Upstream can only be another DNS(UDP) server.
-  server {
-    listen 553 udp;
-    js_preread dns.preread_dns_request;
-    proxy_responses 1;
-    proxy_pass dns;
-  }
+  # server {
+  #   listen 553 udp;
+  #   js_preread dns.preread_dns_request;
+  #   proxy_responses 1;
+  #   proxy_pass dns;
+  # }
 
-  # DNS over HTTPS (gateway) Service
-  # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
-  server {
-    listen 127.0.0.1:8053;
-    js_filter dns.filter_doh_request;
-    proxy_ssl on;
-    proxy_pass dot;
-  }
+  # # DNS over HTTPS (gateway) Service
+  # # Upstream can be either DNS(TCP) or DoT. If upstream is DNS, proxy_ssl should be off.
+  # server {
+  #   listen 127.0.0.1:8053;
+  #   js_filter dns.filter_doh_request;
+  #   proxy_ssl on;
+  #   proxy_pass dot;
+  # }
 
-  # Server for sending blackhole/blocked responses
-  server {
-    listen 127.0.0.1:9953;
-    listen 127.0.0.1:9853;
-    listen 127.0.0.1:9953 udp;
-    listen 127.0.0.1:9853 udp;
-    js_preread dns.preread_dns_request;
-    return dns;
-  }
+  # # Server for sending blackhole/blocked responses
+  # server {
+  #   listen 127.0.0.1:9953;
+  #   listen 127.0.0.1:9853;
+  #   listen 127.0.0.1:9953 udp;
+  #   listen 127.0.0.1:9853 udp;
+  #   js_preread dns.preread_dns_request;
+  #   return dns;
+  # }
 
 
