--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@
 user nginx;
 worker_processes auto;
 
-load_module modules/ngx_stream_js_module.so;
+# load_module modules/ngx_stream_js_module.so;
 # load_module modules/ngx_http_js_module.so;
 
 error_log /var/log/nginx/error.log notice;
